# kanbudb

./: API.md  CMakeLists.txt  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bindings/go_kanbudb/: generate.go  go.mod  hermes.go
bindings/go_kanbudb/cmd/: main.go
bindings/node/: index.js  install.js  package-lock.json  package.json  test.js
bindings/python/: test.py
bindings/python/kanbudb/: __init__.py
docs/superpowers/plans/: 2026-06-10-embedded-database-plan.md  2026-06-10-range-query-plan.md  2026-06-12-thread-safety-plan.md  2026-06-15-tier1-optimization-implementation-plan.md  2026-06-18-multiprocess-shared-wal.md
docs/superpowers/specs/: 2026-06-10-embedded-database-design.md  2026-06-10-range-query-design.md  2026-06-12-thread-safety-design.md  2026-06-18-multiprocess-shared-wal-design.md
include/: db.h  vector.h
src/core/: db.c  db.h
src/fts/: index.c  index.h  parser.c  parser.h  ranker.c  ranker.h  tokenizer.c  tokenizer.h
src/hybrid/: hybrid.c  hybrid.h
src/multi/: multi.c  multi.h
src/query/: query_builder.c  query_builder.h  row_format.c  row_format.h
src/storage/: btree.c  btree.h  compaction.c  compaction.h  lsm.c  lsm.h  shared_meta.c  shared_meta.h  sstable.c  sstable.h  wal.c  wal.h  wal_mmap.c  wal_mmap.h
src/util/: arena.c  arena.h  bloom.c  bloom.h  fst.c  fst.h  macros.h  page_cache.c  page_cache.h  platform_mmap.c  platform_mmap.h
src/vector/: dict_data.h  distance.c  distance.h  embedding.c  embedding.h  hnsw.c  hnsw.h  persistence.c  persistence.h  quantize.c  quantize.h  quantize_internal.h  vec_filter.c  vec_filter.h  vector.c  vector_internal.h
test/bench/: bench_basic.c  bench_persist.c  bench_thread_safety.c  bench_vector.c
test/integration/: test_e2e.c  test_persistence.c
test/unit/: test_arena.c  test_bloom.c  test_btree.c  test_compaction.c  test_db.c  test_distance_simd.c  test_embed.c  test_fst.c  test_fts.c  test_fts_integration.c  test_hnsw.c  test_hybrid.c  test_leveled_compact.c  test_lock_stress.c  test_lsm.c  test_mp_write_read.c  test_multi_process.c  test_multi_stress.c  test_multiprocess.c  test_page_cache.c  test_platform_mmap.c  test_quantize.c  test_query.c  test_shared_meta.c  test_sstable.c  test_sstable_bloom.c  test_thread_safety.c  test_tokenizer.c  test_vec_filter.c  test_vector.c  test_wal.c  test_wal_io.c  test_wal_mmap.c
tools/: amalgamate.py  gen_dict_header.py
