[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "kanbudb"
version = "0.1.0"
description = "KanbuDB Embedded Database"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/kanbudb/kanbudb"

[tool.scikit-build]
cmake.version = ">=3.14"
cmake.args = ["-DKANBUDB_BUILD_TESTS=OFF"]
wheel.packages = ["bindings/python/kanbudb"]

[tool.scikit-build.install]
components = ["python"]
